execution almost done

--- a/web/index.html
+++ b/web/index.html
@@ -263,7 +263,7 @@
                 <option value="select">Only selected pins/connectors</option>
               </select>
               <label>Status:</label>
-              <label id='exStatusText'class='bad'>Stopped</label>
+              <label id='exStatusText'class='bad'>Not running</label>
             </div>
             <div class='exWrapper exStatusPanel' style='display:none'>
               <table style="border-spacing:0px 10px">
